# DataScience-ToolKit-Project

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
app/: server.py
configs/: config.yaml
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore  logistic_regression.pkl  random_forest.pkl
outputs/2025-05-18/13-37-13/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-22/15-30-58/.hydra/: hydra.yaml
outputs/2025-05-22/15-32-29/.hydra/: hydra.yaml
outputs/2025-05-22/15-33-08/.hydra/: hydra.yaml
outputs/2025-05-22/15-37-30/.hydra/: config.yaml  hydra.yaml
src/: main.py  train.py
src/loading_data/: load_data.py
